--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,8 +1,8 @@
 .footer {
     background-color: rgb(0, 0, 0, .1);
-    position: relative;
+    /* position: absolute; */
     bottom: 0;
-    margin-bottom: 0;
+    width: 100%;
     border: 1px solid transparent;
     color:  #000;
     display: flex;
